<resources>
    <string name="app_name">ShopkeeperAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="tv_label_sign_up_activity_log_in"><u>Log In</u></string>
    <string name="title_activity_customer_details">CustomerDetails</string>
    <string name="title_activity_add_customer">AddCustomer</string>
    <string name="tv_label_sign_up_phone">Phone</string>
    <string name="et_sign_up_username_hint">Name</string>
    <string name="et_hint_sign_up_email">Email</string>
    <string name="et_hint_sign_up_password">Password</string>
    <string name="btn_text_sign_up_done">Sign Up</string>
    <string name="tv_label_already_registered">Already Registered?</string>
    <string name="tv_toolbar_sign_up_activity_name">Activity Name</string>
    <string name="et_hint_add_customer_address">Address</string>
    <string name="btn_label_add_customer_done">Add Customer</string>
    <string name="title_activity_display_details_customer">DisplayDetailsCustomer</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="cd_iv_splash_screen">splash_image</string>
    <string name="iv_display_customers">Thumbnail</string>
    <string name="tv_label_details_id">ID</string>
    <string name="btn_label_log_in_done">Log In</string>
    <string name="tv_label_details_phone">Phone</string>
    <string name="tv_label_details_email">Email</string>
    <string name="tv_label_details_address">Address</string>
    <string name="tv_btn_label_details_delete">Delete</string>
    <string name="tv_btn_label_edit">Edit</string>
    <string name="cd_image_details">image_of_customer_at_details_page</string>
</resources>
