<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundSignUp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    android:layout_marginTop="?attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.clicklabs.shopkeeperassignment.activity.AddCustomer"
    tools:showIn="@layout/activity_add_customer">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHintColor">

        <EditText
            android:id="@+id/et_add_customer_username"
            style="@style/default_edit_text_style"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:hint="@string/et_sign_up_username_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHintColor">

        <EditText
            android:id="@+id/et_add_customer_phone"
            style="@style/default_edit_text_style"
            android:drawableLeft="@drawable/ic_phone_white_24dp"
            android:hint="@string/tv_label_sign_up_phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHintColor">

        <EditText
            android:id="@+id/et_add_customer_email"
            style="@style/default_edit_text_style"
            android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
            android:hint="@string/et_hint_sign_up_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHintColor">

        <EditText
            android:id="@+id/et_add_customer_address"
            style="@style/default_edit_text_style"
            android:layout_marginBottom="40dp"
            android:drawableLeft="@drawable/ic_home_white_24dp"
            android:hint="@string/et_hint_add_customer_address"
            android:inputType="textPostalAddress" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_customer_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/selector_for_button"
        android:text="@string/btn_label_add_customer_done"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />


</LinearLayout>
