<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundSignUpInitial"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.clicklabs.shopkeeperassignment.activity.DisplayDetailsCustomer"
    tools:showIn="@layout/activity_display_details_customer">

    <ImageView
        android:contentDescription="@string/cd_image_details"
        android:id="@+id/iv_customer_original_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:src="@android:drawable/sym_def_app_icon" />

    <EditText
        android:id="@+id/et_details_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_customer_original_photo"
        android:editable="false"
        android:enabled="true"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/hr_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/iv_customer_original_photo"
        android:layout_marginBottom="40dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/tv_label_details_customer_id"
        style="@style/default_display_details_text_view_style"
        android:layout_below="@+id/hr_line"
        android:layout_alignParentLeft="true"
        android:text="@string/tv_label_details_id" />









    <EditText

        android:id="@+id/et_details_customer_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hr_line"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@+id/vc_line"
        android:editable="false"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tv_label_details_customer_phone"
        style="@style/default_display_details_text_view_style"
        android:layout_below="@+id/et_details_customer_id"
        android:text="@string/tv_label_details_phone" />

    <EditText
        android:id="@+id/et_details_customer_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_details_customer_id"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@+id/vc_line"
        android:editable="false"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tv_label_details_customer_email"
        style="@style/default_display_details_text_view_style"
        android:layout_below="@+id/et_details_customer_phone"
        android:text="@string/tv_label_details_email" />


    <EditText
        android:id="@+id/et_details_customer_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_details_customer_phone"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@+id/vc_line"
        android:editable="false"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_details_customer_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_details_customer_email"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/vc_line"
        android:editable="false"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tv_label_details_customer_address"
        android:layout_toLeftOf="@id/et_add_customer_address"
        style="@style/default_display_details_text_view_style"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/et_details_customer_email"
        android:text="@string/tv_label_details_address" />

    <TextView
        android:clickable="true"
        android:id="@+id/tv_btn_details_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_details_customer_address"
        android:layout_marginRight="20dp"
        android:text="@string/tv_btn_label_details_delete"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_btn_details_edit"
        android:layout_toLeftOf="@id/tv_btn_details_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_details_customer_address"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_btn_label_edit"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <View
        android:id="@+id/vc_line"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_below="@id/hr_line"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/tv_label_details_customer_address"
        android:background="@color/colorAccent" />


</RelativeLayout>
