<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/colorBackgroundSignUpInitial"
    android:focusableInTouchMode="true"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.clicklabs.shopkeeperassignment.activity.LogIn"
    tools:showIn="@layout/activity_log_in">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHintColor">

        <EditText
            android:id="@+id/et_sign_in_email"
            style="@style/default_edit_text_style"
            android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
            android:hint="@string/et_hint_sign_up_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHintColor">

        <EditText
            android:id="@+id/et_sign_in_password"
            style="@style/default_edit_text_style"
            android:layout_marginBottom="40dp"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawableRight="@drawable/ic_visibility_off_white_24dp"
            android:hint="@string/et_hint_sign_up_password"
            android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/selector_for_button"
        android:text="@string/btn_label_log_in_done"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />



</LinearLayout>
